fixed class conflict; wrapped browse courses in anchor instead of button

--- a/Zbang.Cloudents.Mvc4WebRole/Content/DashLib.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/DashLib.less
@@ -382,12 +382,6 @@
     .boxSizing;
     position: relative;
     vertical-align: top;
-    button {
-        width: 100%;
-        height: 294px;
-        border: 1px solid @borderColor;
-    }
-    
 }
 .actionTxt {
     font-size: 22px;
@@ -403,9 +397,14 @@
 }
 .browseCourses {
     padding-right: 8px; //rtl
+    vertical-align: middle;
+    text-align: center;
+    height: 294px;
+    border: 1px solid @borderColor;
     .actionTxt:before {
 	    background-position: 0 -241px;
     }
+
 }
 .createCourse {
     padding: 0 16px 0 8px;
@@ -414,6 +413,11 @@
     }
     &:only-child {
         padding:0;
+    }
+    button {
+        width: 100%;
+        height: 294px;
+        border: 1px solid @borderColor;
     }
 }
 .recommendedWpr {
