--- a/Zbang.Cloudents.Mvc4WebRole/Content/SetupSchool.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/SetupSchool.less
@@ -23,6 +23,12 @@
     form {
         margin: 20px 15px;
     }
+    .uniName {
+        color: @textColor;
+        font-size: 20px;
+        display: block;
+        font-weight: normal;
+    }
 }
 
 .libEmptyTitle {
@@ -113,17 +119,6 @@
     overflow: hidden;
     display: block;
     padding: 10px 5px 0 8px; /*rtl*/
-}
-
-.uniName {
-    color: @textColor;
-    font-size: 20px;
-    display: block;
-    font-weight: normal;
-    width: auto; //override
-    height: auto;
-    margin: 0;
-    border: none;
 }
 
 .uniCount {
