--- a/Zbang.Cloudents.Mvc4WebRole/Content/Sidebar.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Sidebar.css
@@ -1,4 +1,4 @@
-/*#region variables */
+﻿/*#region variables */
 /*#endregion */
 /*#region mixins */
 /*#endregion */
@@ -12,6 +12,22 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   display: table;
+}
+.asideDash .uniName {
+  display: block;
+  width: 270px;
+  margin: 6px auto 0;
+  font-size: 18px;
+  border: 1px solid #c2c2c2;
+  border-radius: 5px;
+  line-height: 54px;
+  height: 54px;
+}
+.asideDash .uniName .uniText {
+  line-height: 1.1;
+  display: inline-block;
+  vertical-align: middle;
+  margin-top: -3px;
 }
 .asideLib,
 .asideDash {
@@ -42,22 +58,6 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
-.uniName {
-  display: block;
-  width: 270px;
-  margin: 6px auto 0;
-  font-size: 18px;
-  border: 1px solid #c2c2c2;
-  border-radius: 5px;
-  line-height: 54px;
-  height: 54px;
-}
-.uniName .uniText {
-  line-height: 1.1;
-  display: inline-block;
-  vertical-align: middle;
-  margin-top: -3px;
 }
 .productsBtn {
   padding: 10px 0;
@@ -481,4 +481,3 @@
   bottom: 0;
 }
 /*#endregion */
-/*# sourceMappingURL=Sidebar.css.map */
